--- a/angular-without-ssr/src/app/shared/components/bottom-nav/bottom-nav.component.scss
+++ b/angular-without-ssr/src/app/shared/components/bottom-nav/bottom-nav.component.scss
@@ -4,7 +4,7 @@ $bottom-nav-height: 3.5rem;
 
 .bottom-nav {
   display: none;
-  position: sticky;
+  position: fixed;
   bottom: 0;
   left: 0;
   right: 0;
